--- a/helm/linkerd2-app/requirements.yaml
+++ b/helm/linkerd2-app/requirements.yaml
@@ -2,3 +2,7 @@ dependencies:
 - name: partials
   version: 0.1.0
   repository: file://../partials
+- name: grafana
+  version: 0.1.0
+  repository: file://../add-ons/grafana
+  condition: grafana.enabled
