--- a/helm/linkerd2-app/requirements.yaml
+++ b/helm/linkerd2-app/requirements.yaml
@@ -1,8 +1,8 @@
 dependencies:
 - name: partials
   version: 0.1.0
-  repository: file://../partials
+  repository: file://charts/partials
 - name: grafana
   version: 0.1.0
-  repository: file://../add-ons/grafana
+  repository: file://charts/grafana
   condition: grafana.enabled
