make the anonymous role editable

--- a/helm/linkerd2-app/charts/grafana/templates/grafana.yaml
+++ b/helm/linkerd2-app/charts/grafana/templates/grafana.yaml
@@ -25,7 +25,7 @@ data:
 
     [auth.anonymous]
     enabled = true
-    org_role = Editor
+    org_role = {{ .Values.grafana.auth.anonymous.role | default "Editor" }}
 
     [auth.basic]
     enabled = false
