--- a/helm/linkerd2-app/templates/hook-pre-install-annotate-namespace.yaml
+++ b/helm/linkerd2-app/templates/hook-pre-install-annotate-namespace.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
   name: namespace-tagger
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.global.namespace }}
   annotations:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "-20"
@@ -16,7 +16,7 @@ rules:
   resources:
   - namespaces
   resourceNames:
-  - {{ .Release.Namespace }}
+  - {{ .Values.global.namespace }}
   verbs:
   - "*"
 - apiGroups:
@@ -32,7 +32,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: namespace-tagger
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.global.namespace }}
   annotations:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "-15"
@@ -44,7 +44,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
   name: namespace-tagger
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.global.namespace }}
   annotations:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "-14"
@@ -54,18 +54,18 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: namespace-tagger
-    namespace: {{ .Release.Namespace }}
+    namespace: {{ .Values.global.namespace }}
 roleRef:
   kind: Role
   name: namespace-tagger
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.global.namespace }}
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: batch/v1
 kind: Job
 metadata:
   name: namespace-tagger
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.global.namespace }}
   annotations:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "-10"
@@ -86,9 +86,9 @@ spec:
         - -x
         - -c
         - >-
-          kubectl annotate --overwrite ns {{ .Release.Namespace }} {{.Values.global.proxyInjectAnnotation}}={{.Values.global.proxyInjectDisabled}};
-          kubectl label --overwrite ns {{ .Release.Namespace }} {{.Values.global.linkerdNamespaceLabel}}="true";
-          kubectl label --overwrite ns {{ .Release.Namespace }} config.linkerd.io/admission-webhooks=disabled;
-          kubectl -n {{ .Release.Namespace }} delete configmap linkerd-config || true;
+          kubectl annotate --overwrite ns {{ .Values.global.namespace }} {{.Values.global.proxyInjectAnnotation}}={{.Values.global.proxyInjectDisabled}};
+          kubectl label --overwrite ns {{ .Values.global.namespace }} {{.Values.global.linkerdNamespaceLabel}}="true";
+          kubectl label --overwrite ns {{ .Values.global.namespace }} config.linkerd.io/admission-webhooks=disabled;
+          kubectl -n {{ .Values.global.namespace }} delete configmap linkerd-config || true;
       restartPolicy: Never
   backoffLimit: 6
