change default cert scheme to cert-manager

--- a/helm/linkerd2-app/values.yaml
+++ b/helm/linkerd2-app/values.yaml
@@ -22,7 +22,7 @@ global:
   # GS changes: needed now as global value to be available in subcharts including _proxy.tpl
   identity:
     issuer:
-      scheme: &identity_issuer_scheme linkerd.io/tls
+      scheme: &identity_issuer_scheme linkerd.io/cert-manager
 
   # url of external grafana instance.
   grafanaUrl: ""
