--- a/helm/linkerd2-app/templates/linkerd-config-addons.yaml
+++ b/helm/linkerd2-app/templates/linkerd-config-addons.yaml
@@ -13,9 +13,9 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: linkerd-config-addons
-  namespace: {{.Values.global.namespace}}
+  namespace: {{.Release.namespace}}
   labels:
-    {{.Values.global.controllerNamespaceLabel}}: {{.Values.global.namespace}}
+    {{.Values.global.controllerNamespaceLabel}}: {{.Release.namespace}}
   annotations:
     {{.Values.global.createdByAnnotation}}: {{default (printf "linkerd/helm %s" .Values.global.linkerdVersion) .Values.global.cliVersion}}
 data:
