--- a/helm/linkerd2-app/templates/psp.yaml
+++ b/helm/linkerd2-app/templates/psp.yaml
@@ -6,9 +6,9 @@
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: linkerd-{{.Values.global.namespace}}-control-plane
+  name: linkerd-{{.Release.namespace}}-control-plane
   labels:
-    {{.Values.global.controllerNamespaceLabel}}: {{.Values.global.namespace}}
+    {{.Values.global.controllerNamespaceLabel}}: {{.Release.namespace}}
 spec:
   allowPrivilegeEscalation: false
   readOnlyRootFilesystem: true
@@ -62,23 +62,23 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: linkerd-psp
-  namespace: {{.Values.global.namespace}}
+  namespace: {{.Release.namespace}}
   labels:
-    {{.Values.global.controllerNamespaceLabel}}: {{.Values.global.namespace}}
+    {{.Values.global.controllerNamespaceLabel}}: {{.Release.namespace}}
 rules:
 - apiGroups: ['policy', 'extensions']
   resources: ['podsecuritypolicies']
   verbs: ['use']
   resourceNames:
-  - linkerd-{{.Values.global.namespace}}-control-plane
+  - linkerd-{{.Release.namespace}}-control-plane
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: linkerd-psp
-  namespace: {{.Values.global.namespace}}
+  namespace: {{.Release.namespace}}
   labels:
-    {{.Values.global.controllerNamespaceLabel}}: {{.Values.global.namespace}}
+    {{.Values.global.controllerNamespaceLabel}}: {{.Release.namespace}}
 roleRef:
   kind: Role
   name: linkerd-psp
@@ -86,40 +86,40 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: linkerd-controller
-  namespace: {{.Values.global.namespace}}
+  namespace: {{.Release.namespace}}
 - kind: ServiceAccount
   name: linkerd-destination
-  namespace: {{.Values.global.namespace}}
+  namespace: {{.Release.namespace}}
 {{ if .Values.grafana.enabled -}}
 - kind: ServiceAccount
   name: {{.Values.grafana.name}}
-  namespace: {{.Values.global.namespace}}
+  namespace: {{.Release.namespace}}
 {{ end -}}
 {{ if not .Values.disableHeartBeat -}}
 - kind: ServiceAccount
   name: linkerd-heartbeat
-  namespace: {{.Values.global.namespace}}
+  namespace: {{.Release.namespace}}
 {{ end -}}
 - kind: ServiceAccount
   name: linkerd-identity
-  namespace: {{.Values.global.namespace}}
+  namespace: {{.Release.namespace}}
 - kind: ServiceAccount
   name: linkerd-prometheus
-  namespace: {{.Values.global.namespace}}
+  namespace: {{.Release.namespace}}
 - kind: ServiceAccount
   name: linkerd-proxy-injector
-  namespace: {{.Values.global.namespace}}
+  namespace: {{.Release.namespace}}
 - kind: ServiceAccount
   name: linkerd-sp-validator
-  namespace: {{.Values.global.namespace}}
+  namespace: {{.Release.namespace}}
 - kind: ServiceAccount
   name: linkerd-tap
-  namespace: {{.Values.global.namespace}}
+  namespace: {{.Release.namespace}}
 - kind: ServiceAccount
   name: linkerd-web
-  namespace: {{.Values.global.namespace}}
+  namespace: {{.Release.namespace}}
 {{- if .Values.smiMetrics.enabled }}
 - kind: ServiceAccount
   name: linkerd-smi-metrics
-  namespace: {{.Values.global.namespace}}
+  namespace: {{.Release.namespace}}
 {{- end }}
